--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -15,6 +15,7 @@ leptos_router.workspace = true
 leptos_axum = { workspace = true, optional = true }
 leptos-use.workspace = true
 strum.workspace = true
+tracing.workspace = true
 uuid.workspace = true
 
 http.workspace = true
